修改网络图片显示

--- a/application/admin/view/review/reply.html
+++ b/application/admin/view/review/reply.html
@@ -31,7 +31,7 @@
 			<div class="layui-form-item logo">
 				<label class="layui-form-label">评论图片</label>
 				{volist name='img' id='vo'}
-					<div class="layui-input-block" style="display: flex;">
+					<div class="layui-input-inline" style="display: flex;">
 						<img class="layui-upload-img" id="logo_img" src="{$vo}" />
 					</div>
 				{/volist}
