--- a/application/admin/view/public/head.html
+++ b/application/admin/view/public/head.html
@@ -5,6 +5,7 @@
   <title>ADMIN</title>
   <meta name="renderer" content="webkit|ie-comp|ie-stand">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta name="referrer" content="no-referrer">
   <meta name="viewport" content="width=device-width,user-scalable=yes, minimum-scale=0.4, initial-scale=0.8" />
   <meta http-equiv="Cache-Control" content="no-siteapp" />
   <link rel="shortcut icon" href="__static__/favicon.ico" type="image/x-icon" />
