--- a/application/admin/view/review/index.html
+++ b/application/admin/view/review/index.html
@@ -57,7 +57,7 @@
                     , {
                         field: 'handle', title: '操作',
                         templet: function (d) {
-                            var handle = '<button type="button" class="layui-btn layui-btn-normal layui-btn-xs" onclick="x_admin_show(\'回复\',\'/admin/review/reply?id=' + d.id + '\',800,480);">'+reply+'</button>' ;
+                            var handle = '<button type="button" class="layui-btn layui-btn-normal layui-btn-xs" onclick="x_admin_show(\' '+reply+' \',\'/admin/review/reply?id=' + d.id + '\',800,480);">'+reply+'</button>' ;
                             return handle;
                         }
                     }
