登录页样式修改

--- a/application/admin/view/user/login.html
+++ b/application/admin/view/user/login.html
@@ -59,7 +59,7 @@ canvas{
 </dl>
 </body>
 <script>
-$(document).ready(function() {
+/*$(document).ready(function() {
   //粒子背景特效
   $('body').particleground({
     dotColor: '#5cbdaa',
@@ -72,7 +72,7 @@ $(document).ready(function() {
 	  // location.href="javascrpt:"tpa=http://***index.html;\
 
 	});
-});
+});*/
 
 
 function login(){
