--- a/application/admin/view/shop/search_user.html
+++ b/application/admin/view/shop/search_user.html
@@ -8,13 +8,13 @@
     </style>
     <div class="x-body">
         <div class="layui-form" id='searchForm'>
-            <div class="layui-form-item">
+            <!-- <div class="layui-form-item">
                 <label class="layui-form-label">用户昵称</label>
                 <div class="layui-input-block">
                     <input type="text" id="name" name="nickname" autocomplete="off"
                         placeholder="请输入用户昵称" class="layui-input" value="" />
                 </div>
-            </div>
+            </div> -->
             <div class="layui-form-item">
                 <label class="layui-form-label">真实姓名</label>
                 <div class="layui-input-block">
