--- a/application/admin/view/shop/user_del.html
+++ b/application/admin/view/shop/user_del.html
@@ -16,12 +16,12 @@
             <legend>解绑用户</legend>
             <div class="layui-field-box">
                 <div class="layui-form">
-                    <div class="layui-form-item">
+                    <!-- <div class="layui-form-item">
                         <label class="layui-form-label">用户昵称</label>
                         <div class="layui-input-block">
-                            <input class="layui-input" disabled value="{$shop['nickname']}" />
+                            <input class="layui-input" disabled value="" />
                         </div>
-                    </div>
+                    </div> -->
                     <div class="layui-form-item">
                         <label class="layui-form-label">真实姓名</label>
                         <div class="layui-input-block">
