--- a/application/admin/view/shop/shop_add.html
+++ b/application/admin/view/shop/shop_add.html
@@ -122,6 +122,12 @@
                 </div>
             </div>
             <div class="layui-form-item">
+                <label class="layui-form-label">推&nbsp;&nbsp;&nbsp;荐</label>
+                <div class="layui-input-block">
+                  <input type="checkbox" name="hot" lay-skin="switch" lay-text="是|否" value="1">
+                </div>
+            </div>
+            <div class="layui-form-item">
                 <label class="layui-form-label">排&nbsp;&nbsp;&nbsp;&nbsp;序</label>
                 <div class="layui-input-block">
                     <input autocomplete="off" class="layui-input" name="sort"
@@ -202,6 +208,11 @@
         });
         form.on('submit(toSubmit)', function (data) {
             var params = data.field;
+            if(data.field.hot == undefined){
+                params.hot = 0;
+            }else{
+                params.hot = 1;
+            }
 			$.post('/admin/shop/shopAdd', params, function (data) {
 				var res = data.data;
 				if (data.code == 200) {
