--- a/application/admin/view/shop_goods/goods_add.html
+++ b/application/admin/view/shop_goods/goods_add.html
@@ -78,6 +78,12 @@
                         style="width: 100%;height: 400px;"></textarea>
                 </div>
             </div>
+            <div class="layui-form-item">
+                <label class="layui-form-label">推&nbsp;&nbsp;&nbsp;荐</label>
+                <div class="layui-input-block">
+                  <input type="checkbox" name="hot" lay-skin="switch" lay-text="是|否" value="1">
+                </div>
+            </div>
             <input type="hidden" name="thumb" value="" />
             <input type="hidden" name="cate_id" value="" />
             <input type="hidden" name="shop_id" value="{$shop_id}" />
