--- a/application/admin/view/designer/article.html
+++ b/application/admin/view/designer/article.html
@@ -44,9 +44,11 @@
                 [ //表头
                     { type: 'checkbox', fixed: 'left',width:'5%' }
                     , { field: 'id', title: 'ID', width: '5%', fixed: 'left' }
-                    , { field: 'title', title: '文章标题', width: '15%' }
+                    , { field: 'title', title: '文章标题', width: '10%' }
                     , { field: 'cate_title', title: '所属栏目', width: '15%' }
                     , { field: 'author_name', title: '作者', width: '10%' }
+                    , { field: 'uname', title: '账号', width: '15%' }
+                    , { field: 'mobile', title: '手机号', width: '15%' }
                     , {
                         field: 'area', title: '所属地区', width: '10%',
                         templet: function (d) {
