--- a/application/admin/view/designer/article_edit.html
+++ b/application/admin/view/designer/article_edit.html
@@ -27,7 +27,7 @@
                     <select name="author" lay-verify="required" lay-search="">
 						<option value="">直接选择或搜索选择</option>
 						{volist name='designer' id = 'vo'}
-						<option value="{$vo.id}" {if condition="$vo['id'] == $article['author']"}selected{/if}>{$vo.nickName}</option>
+						<option value="{$vo.id}" {if condition="$vo['id'] == $article['author']"}selected{/if}>{$vo.name}</option>
 						{/volist}
 					</select>
                 </div>
@@ -54,7 +54,7 @@
                 </div>
             </div>
             <div class="layui-form-item">
-                <label class="layui-form-label">缩&nbsp;略&nbsp;&nbsp;图</label>
+                <label class="layui-form-label">缩&nbsp;略&nbsp;&nbsp;图(480px*360px)</label>
                 <div class="layui-input-block" style="display: flex;">
                     <button type="button" class="layui-btn upload-img">
                         <i class="layui-icon">&#xe67c;</i>缩略图
