--- a/application/admin/view/goods_brand/index.html
+++ b/application/admin/view/goods_brand/index.html
@@ -9,9 +9,11 @@
         <table id="demo" lay-filter="test"></table>
         <script type="text/html" id="toolbarDemo">
             <div class="layui-btn-container">
+                {if $role_id <= '144'}
                 <button class="layui-btn  layui-btn-sm layui-btn-danger" lay-event="getCheckData">
                     <i class="layui-icon layui-icon-delete"></i>批量删除
                 </button>
+                {/if}
                 <button class="layui-btn layui-btn-sm" onclick="x_admin_show('添加品牌','brandsAdd.html',800,500)">
                     <i class="layui-icon layui-icon-add-circle-fine"></i>添加品牌
                 </button>
