--- a/application/admin/view/shop_goods/goods_add.html
+++ b/application/admin/view/shop_goods/goods_add.html
@@ -57,7 +57,7 @@
                 </div>
             </div>
             <div class="layui-form-item">
-                <label class="layui-form-label">商品主图</label>
+                <label class="layui-form-label">商品主图(360px*360px)</label>
                 <div class="layui-input-block" style="display: flex;">
                     <button type="button" class="layui-btn upload-img">
                         <i class="layui-icon">&#xe67c;</i>选择图片</i>
