--- a/application/admin/view/shop_goods_img/shop_goods_img.html
+++ b/application/admin/view/shop_goods_img/shop_goods_img.html
@@ -12,9 +12,11 @@
         <table id="demo" lay-filter="test"></table>
         <script type="text/html" id="toolbarDemo">
             <div class="layui-btn-container">
+                {if $role_id <= '144'}
                 <button class="layui-btn  layui-btn-sm layui-btn-danger" lay-event="getCheckData">
                     <i class="layui-icon layui-icon-delete"></i>批量删除
                 </button>
+                {/if}
                 {if $count < 5}
                 <button class="layui-btn layui-btn-sm" onclick="x_admin_show('添加图片','imgAdd.html?shop_goods_id={$id}',860,500)">
                     <i class="layui-icon layui-icon-add-circle-fine"></i>添加图片
