--- a/application/admin/view/index/welcome.html
+++ b/application/admin/view/index/welcome.html
@@ -1,313 +1,41 @@
 {include file='public/head'}
 <div class="x-body">
-
-
-
-
     <fieldset class="layui-elem-field">
-        <legend>
-            信息统计
-        </legend>
+        <legend>信息统计</legend>
         <div class="layui-field-box">
-            <table class="layui-table" lay-even="">
-                <thead>
-                    <tr>
-                        <th>
-                            统计
-                        </th>
-                        <th>
-                            资讯库
-                        </th>
-                        <th>
-                            图片库
-                        </th>
-                        <th>
-                            产品库
-                        </th>
-                        <th>
-                            用户
-                        </th>
-                        <th>
-                            管理员
-                        </th>
-                    </tr>
-                </thead>
+            <table class="layui-table" lay-even="" lay-skin="line">
                 <tbody>
                     <tr>
-                        <td>
-                            总数
-                        </td>
-                        <td>
-                            92
-                        </td>
-                        <td>
-                            9
-                        </td>
-                        <td>
-                            0
-                        </td>
-                        <td>
-                            8
-                        </td>
-                        <td>
-                            20
-                        </td>
+                        <td>待审核商家：11</td>
+                        <td>待审核公司：51</td>
+                        <td>待审核设计师：48</td>
+                        <td>待审核技工：15</td>
+                        <td>待审核工长：31</td>
                     </tr>
                     <tr>
-                        <td>
-                            今日
-                        </td>
-                        <td>
-                            0
-                        </td>
-                        <td>
-                            0
-                        </td>
-                        <td>
-                            0
-                        </td>
-                        <td>
-                            0
-                        </td>
-                        <td>
-                            0
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            昨日
-                        </td>
-                        <td>
-                            0
-                        </td>
-                        <td>
-                            0
-                        </td>
-                        <td>
-                            0
-                        </td>
-                        <td>
-                            0
-                        </td>
-                        <td>
-                            0
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            本周
-                        </td>
-                        <td>
-                            2
-                        </td>
-                        <td>
-                            0
-                        </td>
-                        <td>
-                            0
-                        </td>
-                        <td>
-                            0
-                        </td>
-                        <td>
-                            0
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            本月
-                        </td>
-                        <td>
-                            2
-                        </td>
-                        <td>
-                            0
-                        </td>
-                        <td>
-                            0
-                        </td>
-                        <td>
-                            0
-                        </td>
-                        <td>
-                            0
-                        </td>
+                        <td>待审核商品：11</td>
+                        <td>待审核认证：51</td>
+                        <td>待审核文章：48</td>
+                        <td>待审核案例：15</td>
+                        <td>待审核公告：31</td>
                     </tr>
                 </tbody>
             </table>
-            <table class="layui-table">
-                <thead>
-                    <tr>
-                        <th colspan="2" scope="col">
-                            服务器信息
-                        </th>
-                    </tr>
-                </thead>
+            <table class="layui-table" lay-even="" lay-skin="line">
                 <tbody>
                     <tr>
-                        <th width="30%">
-                            服务器计算机名
-                        </th>
-                        <td>
-                            <span id="lbServerName">
-                                http://127.0.0.1/
-                            </span>
-                        </td>
+                        <td>今日加盟申请：11</td>
+                        <td>今日公司预约：51</td>
+                        <td>今日设计师预约：11</td>
+                        <td>今日技工预约：48</td>
+                        <td>今日工长预约：15</td>
                     </tr>
                     <tr>
-                        <td>
-                            服务器IP地址
-                        </td>
-                        <td>
-                            192.168.1.1
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            服务器域名
-                        </td>
-                        <td>
-                            xmwxgn.com
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            服务器端口
-                        </td>
-                        <td>
-                            80
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            服务器NGINX版本
-                        </td>
-                        <td>
-                            1.8
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            本文件所在文件夹
-                        </td>
-                        <td>
-                            D:\WebSite\HanXiPuTai.com\XinYiCMS.Web\
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            服务器操作系统
-                        </td>
-                        <td>
-                            Centeros7.3
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            系统所在文件夹
-                        </td>
-                        <td>
-                            \www\wwwroot\ls
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            服务器脚本超时时间
-                        </td>
-                        <td>
-                            30000秒
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            服务器的语言种类
-                        </td>
-                        <td>
-                            Chinese (People's Republic of China)
-                        </td>
-                    </tr>
-                  
-                    <tr>
-                        <td>
-                            服务器当前时间
-                        </td>
-                        <td>
-                            2017-01-01 12:06:23
-                        </td>
-                    </tr>
-                  
-                    <tr>
-                        <td>
-                            服务器上次启动到现在已运行
-                        </td>
-                        <td>
-                            7210分钟
-                        </td>
-                    </tr>
-                   
-                    <tr>
-                        <td>
-                            CPU 总数
-                        </td>
-                        <td>
-                            1
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            CPU 类型
-                        </td>
-                        <td>
-                            x86 Family 6 Model 42 Stepping 1, GenuineIntel
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            虚拟内存
-                        </td>
-                        <td>
-                            52480M
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            当前程序占用内存
-                        </td>
-                        <td>
-                            3.29M
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            Asp.net所占内存
-                        </td>
-                        <td>
-                            51.46M
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            当前Session数量
-                        </td>
-                        <td>
-                            8
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            当前SessionID
-                        </td>
-                        <td>
-                            gznhpwmp34004345jz2q3l45
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            当前系统用户名
-                        </td>
-                        <td>
-                            NETWORK SERVICE
-                        </td>
+                        <td>今日信息发布：31</td>
+                        <td>今日商城订单：630</td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
                     </tr>
                 </tbody>
             </table>
@@ -317,4 +45,9 @@
         龙吉宅 longjizhai.com
     </blockquote> -->
 </div>
+<style>
+    .layui-table td,.layui-table th{
+        text-align: left;
+    }
+</style>
 {include file='public/foot'}
